// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Knobs.withKnobs XSS safety 1`] = `
<div>
  &lt;img src="x" onerror="alert('XSS Attack')" &gt;
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs accepts story parameters 1`] = `
<div>
  &lt;h1&gt;Hello&lt;/h1&gt;
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs complex select 1`] = `
<pre>
  the type of string = string
</pre>
`;

exports[`Storyshots Addons|Knobs.withKnobs dynamic knobs 1`] = `
<div>
  <div>
    I must be here
  </div>
  <div>
    I can disappear
  </div>
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs optionsKnob 1`] = `
<div
  style="color:white"
>
  <p>
    Weekday: Tuesday
  </p>
  <p>
    Weekend: Saturday
  </p>
  <p>
    Month: January
  </p>
  <p>
    Fruit:
  </p>
  <ul>
    <li>
      apple
    </li>
  </ul>
  <p>
    Vegetables:
  </p>
  <ul>
    <li>
      carrot
    </li>
  </ul>
  <p>
    Dairy:
  </p>
  <ul>
    <li>
      milk
    </li>
  </ul>
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs triggers actions via button 1`] = `
<div>
  <p>
    Hit the knob button and it will toggle the items list into multiple states.
  </p>
  <p>
    No items loaded
  </p>
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs tweaks static values 1`] = `
<div
  style="background-color:#dedede;border:2px dashed silver;border-radius:10px;padding:10px"
>
  <p>
    My name is Storyteller, I'm 70 years old, and my favorite fruit is apple. I also enjoy watermelon.
  </p>
  <p>
    My birthday is: January 20, 2017
  </p>
  <p>
    I live in NY for 9 years.
  </p>
  <p>
    My wallet contains: $12.50
  </p>
  <p>
    In my backpack, I have:
  </p>
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
  <p>
    Nice to meet you!
  </p>
  <p>
    When I am happy I look like this: 
    <img
      alt="happy"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAQAAAC1+jfqAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfiARwMCyEWcOFPAAAAP0lEQVQoz8WQMQoAIAwDL/7/z3GwghSp4KDZyiUpBMCYUgd8rehtH16/l3XewgU2KAzapjXBbNFaPS6lDMlKB6OiDv3iAH1OAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTAxLTI4VDEyOjExOjMzLTA3OjAwlAHQBgAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0wMS0yOFQxMjoxMTozMy0wNzowMOVcaLoAAAAASUVORK5CYII="
    />
  </p>
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs tweaks static values organized in groups 1`] = `
<div
  style="background-color:rgba(126, 211, 33, 0.22);border:2px dashed silver;border-radius:10px;padding:10px"
>
  <h1>
    General Information
  </h1>
  <p>
    Name: Storyteller
  </p>
  <p>
    Age: 70
  </p>
  <p>
    Birthday: January 20, 2017
  </p>
  <p>
    Account Balance: 12.5
  </p>
  <p>
    Years in NY: 9
  </p>
  <hr />
  <h1>
    Favorites
  </h1>
  <p>
    Catchphrase: Nice to meet you!
  </p>
  <p>
    Fruit: apple
  </p>
  <p>
    Other Fruit: watermelon
  </p>
  <p>
    Items:
  </p>
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobs using options accepts options 1`] = `
<div>
  &lt;h1&gt;Hello&lt;/h1&gt;
</div>
`;

exports[`Storyshots Addons|Knobs.withKnobsOptions displays HTML code 1`] = `
<div>
  &lt;h1&gt;Hello&lt;/h1&gt;
</div>
`;
